Updating share page

--- a/share.html
+++ b/share.html
@@ -43,7 +43,9 @@
 
     <main class="app-container">
 
-        <p>Congrats!</p>
+        <div id="facebook"></div>
+        <div id="twitter"></div>
+        <div id="email"></div>
 
     </main> <!-- /container -->
 
