Created parts objects, zip code to form, social share functionality

--- a/index.html
+++ b/index.html
@@ -51,10 +51,18 @@
         <input name="lname" type="text" id="inputLname" class="form-control" placeholder="Last Name" required autofocus>
         <label for="inputEmail" class="sr-only">Email address</label>
         <input name="email" type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <label for="inputZip" class="sr-only">Zip Code</label>
+        <input name="zip" type="number" maxlength="5" id="inputZip" class="form-control" placeholder="Zip Code" required autofocus>
           <p>Which body part did you select?</p>
           <select id="bodyparts" name="bodyparts">
-            <option value="adamsApple">Adam's Apple</option>
-            <option value="borkenHeart">Broken Heart</option>
+            <option value="brain">Brain</option>
+            <option value="heart">Heart</option>
+            <option value="knee">Knee</option>
+            <option value="stomach">Stomach</option>
+            <option value="lungs">Lungs</option>
+            <option value="foot">Foot</option>
+            <option value="leftArm">Left Arm</option>
+            <option value="rightArm">Right Arm</option>
           </select>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Share</button>
       </form>
