--- a/share.html
+++ b/share.html
@@ -71,6 +71,8 @@
 
    <body>
 
+       <div id="fb-root"></div>
+
     <main class="app-container">
         <ul>
         <li id="facebook" class="share"></li>
