More changes for email and share page

--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Share a Medi-Cal Story</title>
+    <title>Medi-Cal Operation</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="author" content="SEIU-UHW" />
     <!-- Styles -->
       <link data-require="bootstrap-css" data-semver="3.3.1" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" />
     <link data-require="bootstrap@*" data-semver="3.3.2" rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" />
