added images,updated social shares

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <option value="leftArm">Left Arm</option>
             <option value="rightArm">Right Arm</option>
           </select>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Share</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Next</button>
       </form>
 
 
