--- a/index.html
+++ b/index.html
@@ -21,14 +21,13 @@
         }
       }
     </style>
-    <link href="style.css" rel="stylesheet" />
-    <link href="signup.css" rel="stylesheet" />
+      <link href="styles/style.css" rel="stylesheet" />
+      <link href="styles/signup.css" rel="stylesheet" />
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
