--- a/share.html
+++ b/share.html
@@ -23,9 +23,9 @@
             -moz-box-shadow: 3px 3px 5px #888;
         }
         .share:last-child { margin-right: 0px; }
-        #facebook { background: url(share-icons.png) 0 0; }
-        #twitter { background: url(share-icons.png) 207px 0; }
-        #email { background: url(share-icons.png) 104px 0; }
+        #facebook { background: url(images/share-icons.png) 0 0; }
+        #twitter { background: url(images/share-icons.png) 207px 0; }
+        #email { background: url(images/share-icons.png) 104px 0; }
         @media (max-width: 979px) {
         /* Remove any padding from the body */
         body {
@@ -33,14 +33,13 @@
         }
         }
     </style>
-    <link href="style.css" rel="stylesheet" />
-    <link href="signup.css" rel="stylesheet" />
+      <link href="styles/style.css" rel="stylesheet" />
+      <link href="styles/signup.css" rel="stylesheet" />
     <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
       <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <!-- Fav and touch icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="images/apple-touch-icon-72x72.png" />
     <link rel="apple-touch-icon" sizes="114x114" href="images/apple-touch-icon-114x114.png" />
@@ -94,7 +93,7 @@
 
     <script data-require="jquery" data-semver="2.1.3" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script data-require="bootstrap" data-semver="3.3.2" src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    <script src="script.js"></script>
+<script src="js/script.js"></script>
   </body>
 
 </html>
