Major changes to email, form width and fix to Twitter web intent

--- a/share.html
+++ b/share.html
@@ -71,12 +71,14 @@
     <div id="fb-root"></div>
 
     <main class="app-container">
-        <h1 id="share-title">Share the story with </h1><br/>
-        <ul>
-        <li id="facebook" class="share"></li>
-        <li id="twitter" class="share"></li>
-        <li id="email" class="share"></li>
-        </ul>
+        <section id="social-buttons">
+            <h1 id="share-title">Share the story with </h1><br/>
+            <ul>
+            <li id="facebook" class="share"></li>
+            <li id="twitter" class="share"></li>
+            <li id="email" class="share"></li>
+            </ul>
+        </section>
 
         <form id="emailForm" action="email.php" method="post" target="_blank" class="form-signin">
             <h2>Email Text</h2>
