Small style changes

--- a/share.html
+++ b/share.html
@@ -22,7 +22,7 @@
             -webkit-box-shadow: 3px 3px 5px #888;
             -moz-box-shadow: 3px 3px 5px #888;
         }
-        .share:last-child { margin-right: 0px; }
+        .share:last-child { margin-right: 0px; cursor: pointer; }
         #facebook { background: url(images/share-icons.png) 0 0; }
         #twitter { background: url(images/share-icons.png) 207px 0; }
         #email { background: url(images/share-icons.png) 104px 0; }
