transform for share icons on hover

--- a/share.html
+++ b/share.html
@@ -21,8 +21,14 @@
             box-shadow: 3px 3px 5px #888;
             -webkit-box-shadow: 3px 3px 5px #888;
             -moz-box-shadow: 3px 3px 5px #888;
+            cursor: pointer;
         }
-        .share:last-child { margin-right: 0px; cursor: pointer; }
+        .share:last-child { margin-right: 0px; }
+        .share:hover {
+            transform: scale(1.1,1.1);
+            -webkit-transform: scale(1.1,1.1);
+            -moz-transform: scale(1.1,1.1);
+        }
         #facebook { background: url(images/share-icons.png) 0 0; }
         #twitter { background: url(images/share-icons.png) 207px 0; }
         #email { background: url(images/share-icons.png) 104px 0; }
